fix alignment of portfolio items

--- a/basic_portfolio/styles/_base.scss
+++ b/basic_portfolio/styles/_base.scss
@@ -22,7 +22,7 @@ h2 {
 }
   
 .container.portfolio .portfolio-item{
-    margin-top: 15px;
+    margin-top: 35px;
 }
 
 a {
