--- a/basic_portfolio/styles/main.css
+++ b/basic_portfolio/styles/main.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 .container.portfolio .portfolio-item {
-  margin-top: 15px;
+  margin-top: 35px;
 }
 
 a {
